fix overlapping when adding ops

--- a/scss/components/patch.scss
+++ b/scss/components/patch.scss
@@ -309,7 +309,7 @@
     .op_handle_devices { fill:$color_op_handle_devices; }
     .op_handle_html { fill:$color_op_handle_html; }
     .op_handle_math { fill:$color_op_handle_math; }
-    .op_handle_user { fill:$color_op_handle_user; }
+    .op_handle_user { fill:$color_op_handle_user; text-decoration:underline}
 
 }
 
